adding new stuff

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,15 @@
-age.error = errore in age..
-phone.error = error in phone..
+age.error = {0} should be between {1} and {2} -custom
+phone.error = {phone} is invalid -custom
+communicationdto.email.invalid = the email domain should be: @seleniumexpress.com -custom
+username.empty = Username can't be empty -custom
+username.invalid = USername must contain ' _ ' -custom
+registrationdto.name.empty = {0} can not be empty -custom
+userinfodto.name.empty = {0} can not be empty -custom
+userinfodto.name.invalid = {0} should have char between {2}-{1} -custom
+
+phone = phone number
+
+
+
+typeMismatch.registrationUserDto.age = age should be Integer -custom
 
